Navbar overflow right fixed

--- a/components/Navbar/navbar.css
+++ b/components/Navbar/navbar.css
@@ -1,8 +1,9 @@
 header {
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 200;
     width: 100%;
+    background-color: white;
 }
 
 header .header-container {
